--- a/src/app/consultant/consultant.component.html
+++ b/src/app/consultant/consultant.component.html
@@ -29,3 +29,47 @@
 <input type="text" placeholder="Skill" formControlName="skill">
 <button type="button" (click)="form(consultant)">get</button>
 </form>
+
+
+<form class="consultant-form">
+  <h2 class="text-center">Consultant profile</h2>
+  <div class="form-group text-center">
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+      <label class="form-check-label" for="inlineRadio1">Male</label>
+    </div>
+    <div class="form-check form-check-inline">
+      <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+      <label class="form-check-label" for="inlineRadio2">Female</label>
+    </div>
+  </div>
+  <div class="form-group text-center gender">
+    <img src="../../assets/images/woman.jpg" alt="" class="img-fluid">
+  </div>
+  <div class="form-group">
+    <label for="email" >Email</label>
+    <input type="email" name="email" id="email" class="form-control"
+           placeholder="Phone...">
+  </div>
+  <div class="form-group">
+    <label for="country" >Country</label>
+    <select id="country" class="selectpicker countrypicker float-right"
+            data-live-search="true"
+            data-default="Tunisia"
+            data-flag="true">
+    </select>
+  </div>
+  <div class="form-group">
+    <label for="password" >Phone</label>
+    <input type="number" name="phone" id="password" class="form-control"
+           placeholder="Phone...">
+  </div>
+  <div class="form-group">
+    <label for="candDescription" >Description</label>
+    <textarea type="password" name="candDescription" id="candDescription" class="form-control"
+              placeholder="Something about you..."></textarea>
+  </div>
+  <div class="form-check">
+    <button type="submit" class="btn btn-login float-right" (click)="candidatBtn()">Submit</button>
+  </div>
+</form>
