--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -6,8 +6,8 @@ section{
 
 .home-block{
   background: #DE6262;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to bottom, #FFB88C, #DE6262);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to bottom, #FFB88C, #DE6262); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to bottom, #0f867fdb , #4c4c4cb8);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #0f867fdb , #4c4c4cb8); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   float:left;
   width:100%;
   padding : 50px 0;
@@ -33,17 +33,17 @@ section>.container>.row>ul>li{
 }
 .nav-tabs .nav-link {
   border: none;
-  background-color: #FEB58A;
+  background-color: #d8d1cd;
   border-top-left-radius: .25rem;
   border-top-right-radius: .25rem;
-  color: #DE6262;
+  color: #3a3030;
 }
 .nav-tabs .nav-link a {
 }
 .nav-tabs .nav-item.show .nav-link,
 .nav-tabs .nav-link.active {
   color: #ffffff;
-  background-color: #DE6262;
+  background-color: #0f867fdb;
   border-color: #dee2e6 #dee2e6 #fff;
 }
 
