--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
         <h2 class="text-center">Login Now</h2>
         <form class="login-form">
           <div class="form-group">
-            <label for="email" class="text-uppercase">Email</label>
+            <label for="email" class="color1">Email</label>
             <input  [(ngModel)]="email" type="text" name="email" id="email" class="form-control" placeholder="Email...">
           </div>
           <div class="form-group">
